# Naval-war

./: .gitignore  CMakeLists.txt  README.md  cmake_and_compile.sh  log_cc.txt  log_pc.txt  readme.txt
Naval-war-main/: CMakeLists.txt  cmake_and_compile.sh  log_pc.txt
Naval-war-main/include/: attackgrid.h  grid.h  robot.h  supporto.h  utilities.h
Naval-war-main/lib/: attackgrid.cpp  esplorazione.cpp  player.cpp  supporto.cpp
Naval-war-main/src/: game.cpp  replay.cpp
docs/: consigli.txt  defensegrid-DESKTOP-078IT0C.cpp  dubbi.txt  osservazioni.txt  scelte_progettuali.txt
include/: attackgrid.h  boat.h  boats.h  corazzata.h  defensegrid.h  esplorazione.h  grid.h  grids.h  person.h  player.h  robot.h  supporto.h  utilities.h
include/elements/: attackgrid.h  boat.h  boats.h  cell.h  corazzata.h  defensegrid.h  esplorazione.h  grid.h  grids.h  person.h  player.h  robot.h  sottomarino.h  supporto.h  utilities.h
include/game/: game.h  replay.h
lib/: CMakeLists.txt  attackgrid.cpp  boat.cpp  corazzata.cpp  defensegrid.cpp  esplorazione.cpp  person.cpp  player.cpp  robot.cpp  supporto.cpp  utilities.cpp
lib/docs/: consigli.txt  defensegrid-DESKTOP-078IT0C.cpp  dubbi.txt  osservazioni.txt  scelte_progettuali.txt
lib/elements/: attackgrid.cpp  boat.cpp  corazzata.cpp  defensegrid.cpp  esplorazione.cpp  grid.cpp  person.cpp  player.cpp  robot.cpp  supporto.cpp  utilities.cpp
lib/game/: game.cpp  replay.cpp
lib/include/elements/: attackgrid.h  boat.h  corazzata.h  defensegrid.h  esplorazione.h  exceptions.h  grid.h  person.h  player.h  robot.h  supporto.h  utilities.h
lib/include/game/: game.h  replay.h
lib/lib/elements/: attackgrid.cpp  boat.cpp  corazzata.cpp  defensegrid.cpp  esplorazione.cpp  grid.cpp  supporto.cpp  utilities.cpp
lib/src/: attackgridtester.cpp  coordinatestester.cpp  defensegridtester.cpp  navalbattle.cpp
src/: attackgridtester.cpp  coordinatestester.cpp  defensegridtester.cpp  game.cpp  navalbattle.cpp  replay.cpp  test.cpp
